--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Bicycle{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
         {% endblock %}
 
@@ -11,6 +10,14 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            <h4>Id: {{ bicycle.id }}</h4>
+            <a href="{{ path('ride', {'id': bicycle.id }) }}">Ride</a>
+            <h4>Gear: {{ bicycle.gear }}</h4>
+            <a href="{{ path('shiftUp', {'id': bicycle.id }) }}">Shift Up</a>
+            <a href="{{ path('shiftDown', {'id': bicycle.id }) }}">Shift Down</a>
+            <h4>Tire Pressure: {{ bicycle.tirePressure }}</h4>
+            <a href="{{ path('inflateTires', {'id': bicycle.id }) }}">Inflate Tires</a>
+        {% endblock %}
     </body>
 </html>
